--- a/index.html
+++ b/index.html
@@ -157,6 +157,20 @@
                 <div class="col-md-9">
                     <h2 class="py-3">最近更新文章</h2>
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-06-21">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-6-21-free-v2ray.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/c8e6376117c27d8b3bcf0302b91cbd97.webp" alt="免费Clash SSR - 6月21日20.6M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-6-21-free-v2ray.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 6月21日20.6M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了香港、日本、韩国、加拿大、欧洲、新加坡、美国等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-06-20">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-6-20-free-v2ray-subscribe.htm" class="xcblog-blog-url">
@@ -423,20 +437,6 @@
                                 <p>这一次的节点更新覆盖了美国、香港、日本、新加坡、加拿大、欧洲、韩国等地区,最高速度可达20.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-06-01">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-6-1-node-share-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240825-1/9c2a579dfa1603d891f963a8511324b9.webp" alt="免费Clash SSR - 6月1日23M/S|免费Shadowrocket/Clash/V2ray/SSR节点订阅分享" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-6-1-node-share-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        免费Clash SSR - 6月1日23M/S|免费Shadowrocket/Clash/V2ray/SSR节点订阅分享                                    </h3>
-                                </a>
-                                <p>这一次的节点更新覆盖了欧洲、日本、美国、新加坡、加拿大、香港、韩国等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            </div>
-                        </div>
                                             </div>
                 </div>
                 <div class="col-md-3">
@@ -446,16 +446,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-5-24-free-subscribe-node.htm" title="免费Clash SSR - 5月24日19.9M/S|免费V2ray/Clash/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 5月24日19.9M/S|免费V2ray/Clash/Shadowrocket/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-31-free-node-subscribe-links.htm" title="免费Clash SSR - 5月31日20.7M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 5月31日20.7M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-6-free-node-subscribe.htm" title="免费Clash SSR - 6月6日20M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享">免费Clash SSR - 6月6日20M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-25-free-v2ray.htm" title="免费Clash SSR - 5月25日22.2M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享">免费Clash SSR - 5月25日22.2M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-20-free-v2ray-subscribe.htm" title="免费Clash SSR - 6月20日22.3M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享">免费Clash SSR - 6月20日22.3M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-9-free-node-subscribe.htm" title="免费Clash SSR - 6月9日19.4M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 6月9日19.4M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-27-free-subscribe-node.htm" title="免费Clash SSR - 5月27日18.7M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享">免费Clash SSR - 5月27日18.7M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-30-free-v2ray-subscribe.htm" title="免费Clash SSR - 5月30日19.2M/S|免费V2ray/Shadowrocket/Clash/SSR节点订阅分享">免费Clash SSR - 5月30日19.2M/S|免费V2ray/Shadowrocket/Clash/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-18-free-v2ray.htm" title="免费Clash SSR - 6月18日23M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享">免费Clash SSR - 6月18日23M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-21-free-v2ray.htm" title="免费Clash SSR - 6月21日20.6M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享">免费Clash SSR - 6月21日20.6M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-1-node-share-links.htm" title="免费Clash SSR - 6月1日23M/S|免费Shadowrocket/Clash/V2ray/SSR节点订阅分享">免费Clash SSR - 6月1日23M/S|免费Shadowrocket/Clash/V2ray/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-7-free-high-speed-nodes.htm" title="免费Clash SSR - 6月7日22M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 6月7日22M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-22-free-subscribe-node.htm" title="免费Clash SSR - 5月22日19.9M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享">免费Clash SSR - 5月22日19.9M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-28-free-subscribe-node.htm" title="免费Clash SSR - 5月28日22.9M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享">免费Clash SSR - 5月28日22.9M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-8-node-share.htm" title="免费Clash SSR - 6月8日19.4M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享">免费Clash SSR - 6月8日19.4M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-6-3-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 6月3日20.7M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 6月3日20.7M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-19-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 6月19日22.8M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享">免费Clash SSR - 6月19日22.8M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-12-free-node-subscribe.htm" title="免费Clash SSR - 6月12日22.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享">免费Clash SSR - 6月12日22.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-29-node-share.htm" title="免费Clash SSR - 5月29日20.5M/S|免费V2ray/SSR/Clash/Shadowrocket节点订阅分享">免费Clash SSR - 5月29日20.5M/S|免费V2ray/SSR/Clash/Shadowrocket节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -467,7 +467,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">11</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
